@@ -2839,6 +2839,7 @@ $1',
 'sp-contributions-logs'          => 'logs',
 'sp-contributions-talk'          => 'talk',
 'sp-contributions-userrights'    => 'user rights management',
+'sp-contributions-blocked-notice'=> 'This user is currently blocked. The latest block log entry is provided below for reference:',
 'sp-contributions-search'        => 'Search for contributions',
 'sp-contributions-username'      => 'IP Address or username:',
 'sp-contributions-submit'        => 'Search',
